# jira-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/jira_mcp/: __init__.py  __main__.py  adf.py  client.py  config.py  formatting.py  server.py
tests/: test_adf.py  test_client.py  test_config.py  test_formatting.py  test_server.py
