[project]
name = "jira-mcp"
dynamic = ["version"]
description = "A Model Context Protocol (MCP) server for Atlassian Jira"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "jira-mcp contributors" }]
keywords = ["mcp", "jira", "atlassian", "llm", "agent", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "build>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/alirezahematidev/jira-mcp"
Repository = "https://github.com/alirezahematidev/jira-mcp"
Issues = "https://github.com/alirezahematidev/jira-mcp/issues"
Changelog = "https://github.com/alirezahematidev/jira-mcp/blob/main/CHANGELOG.md"

[project.scripts]
jira-mcp = "jira_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/jira_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/jira_mcp",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    ".env.example",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
